List view table sorting name overlapping fixed-Sangram Desai

--- a/magenta-simple/core/css/server.css
+++ b/magenta-simple/core/css/server.css
@@ -1076,3 +1076,7 @@ table th .sort-indicator {
     vertical-align: text-bottom;
     opacity: 0.3;
 }
+
+.span-visibility{
+	display: none;
+}
